--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,7 +27,7 @@
           <a href="#pricing"> pricing</a>
           <a href="contact"> contact</a>
           <!-- <a href="#blogs"> blogs</a> -->
-          <a href="team">Team</a>
+          <a href="team">CEO</a>
    
        
     </nav>
