--- a/views/team.ejs
+++ b/views/team.ejs
@@ -4,37 +4,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>meet the ppn team</title>
+  <title>meet the ppn CEO</title>
 
   <link rel="stylesheet" href="../public/css/team.css">
 </head>
 
 <body>
   <div class="container">
-    <h1 class="heading"><span>meet</span> Our Team</h1>
+    <h1 class="heading"><span>meet</span> the CEO</h1>
 
     <div class="profiles">
       <div class="profile">
         <img src="../public/images/img1.jpg" class="profile-img">
 
-        <h3 class="user-name">Peace</h3>
-        <h5> CEO & co-founder </h5>
+        <h3 class="user-name">Peace Nnaji</h3>
+        <h5> CEO & founder </h5>
         <p>Meet the CEO of PPN Global ventures</p>
+      
       </div>
-      <div class="profile">
+      <!-- <div class="profile">
         <img src="../public/images/img2.jpg" class="profile-img">
 
         <h3 class="user-name">Pascal</h3>
         <h5>Managing Partner & co-founder </h5>
         <p>The managing partner and co-founder of PPN Global ventures.</p>
-      </div>
-      <div class="profile">
+      </div> -->
+      <!-- <div class="profile">
         <img src="../public/images/img3.jpg" class="profile-img">
 
         <h3 class="user-name">Isabella</h3>
         <h5>Project Manager</h5>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, eveniet!</p>
-      </div>
+      </div> -->
     </div>
   </div>
 </body>
