--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -63,7 +63,7 @@
 			amount,
 			currency: "NGN",
 			country: "NG",
-			payment_options: "card,banktransfer,ussd",
+			payment_options:"card, ussd,	account, mobilemoneyghana",
 
 			// specified redirect URL
 			redirect_url: "http://localhost:8080/pay/approved",
@@ -81,9 +81,10 @@
 				// close modal
 			},
 			customizations: {
-				title: "Pay with Ppn global",
+				title: "Pay with ppn global",
 				description: "pay for a service",
-				logo: "https://cdn.iconscout.com/icon/premium/png-256-thumb/payment-2193968-1855546.png",
+				logo: "https://i.postimg.cc/5tTMXnKG/ppn-logo.jpg",
+			//	https://cdn.iconscout.com/icon/premium/png-256-thumb/payment-2193968-1855546.png
 			},
 		});
 	}
