correct the redirect payment url

--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -66,7 +66,7 @@
 			payment_options:"card, ussd,	account, mobilemoneyghana",
 
 			// specified redirect URL
-			redirect_url: "http://localhost:8080/pay/approved",
+			redirect_url: "https://ppnglobalventures.herokuapp.com/pay/approved",
 
 			// use customer details if user is not logged in, else add user_id to the request
 			customer: {
