--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -91,7 +91,7 @@ a.auth_branding_in img {
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #2900b7;
+  background-color: #a5b700;
   border-color: #2900b7;
 }
 .google_signup a {
