--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -4,14 +4,58 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
+
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+        </script>
+  <link href="../public/css/reset.css" rel="stylesheet" type="text/css">
+  <title>Continue with your password reset</title>
 </head>
-<body>
-  <form action="" method="post">
-    <input type="text" name="email" value="<%= email %>">
-    <input type="tel" name="password" placeholder="new password here">
-    <input type="tel" name="password2" placeholder="retype password here">
-   <button type="submit">submit </button>
-  </form>
+<body class="auth_class">
+
+  <div class="container login-container">
+    <img class="triangleA" src="https://res.cloudinary.com/procraftstudio/image/upload/v1613965232/triangleA_lwqhnl.png" alt='Onestop triangle'>
+  <div class="row">
+    <div class="col-md-6 welcome_auth">
+        <div class="auth_welcome">
+          We are ppn global ventures, we are here for you always  <span><a href="/">ppn</a></span>
+        </div>
+    </div>         
+    <div class="col-md-6 login-form">
+        <div class="login_form_in">
+          <h1 class="auth_title text-left">Password Reset</h1>
+          <form action="" method="post">
+            <div class="alert alert-success bg-soft-primary border-0" role="alert">
+               input your new password here
+            </div>                    
+            <div class="form-group">
+              <input type="email" class="form-control" name="email" value="<%= email %>" >
+            </div>
+            <div class="form-group">
+              <input type="password" class="form-control" name="password" placeholder="New password here" >
+            </div>
+            <div class="form-group">
+              <input type="password" class="form-control" name="password2" placeholder="retype password here" >
+            </div>
+            <div class="form-group">
+              <button type="submit" class="btn btn-primary btn-lg btn-block">Reset password</button>
+            </div>
+            <div class="form-group other_auth_links">
+                <a class="" href="/">Login</a>
+                <a class="" href="/">Register</a>
+            </div>
+          </form>
+        </div>
+    </div>       
+  </div>
+</div>
+<img class="triangleB" src="https://res.cloudinary.com/procraftstudio/image/upload/v1613965232/triangleB_isffjy.png" alt='Onestop triangle'>
 </body>
 </html>
