correct https redirects for production

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -149,10 +149,8 @@
      </div>
 
      <div class="content">
-        <h3>We will provide you the best work which you dreamt for!</h3>
-        <p>Having worked with hundreds of clients over the last six years, we have developed a reputation for ourselves and have established ourselves in the industry,Having worked with different Government agencies in numerous projects, you can trust us with whatever the task is. here at ppn global, we have all it takes to make your project just as you envisioned it. </p>
-
-        <!-- <a href="#services" class="btn">read more</a> -->   
+        <h3>We deliver just the way you imagined it to be !</h3>
+        <p>Having worked with hundreds of clients over the last seven years, we have developed a reputation for ourselves and have established ourselves in the industry, we have also worked with different Government agencies on dozens of infrastructural and social projects.Here at ppn global ventutes,we have all it takes to make your project just the way you envisioned it. </p> 
      </div>
   </div>
 
@@ -195,7 +193,7 @@
      <div class="box">
         <img src="../public/images/service-1.png" alt="">
         <h3>Building construction</h3>
-        <p>Do you have a building you want to develop at any level, give us a call now! we can handle it</p>
+        <p>We handle building and construction services, Do you have a building you want to develop at any level, give us a call now! we can handle it</p>
      </div>
 
      <div class="box">
@@ -207,13 +205,13 @@
      <div class="box">
         <img src="../public/images/road.png" alt="">
         <h3>Road construction services</h3>
-        <p>Our reliable group of engineers and contractors were born to attend to your contracts to give quality and undamaging road construction services, Our services are always in the highest quality. dont hesitate to give us a call to make more enquiries  </p>
+        <p>Our reliable group of engineers and contractors were born to attend to your contracts to give quality and reliable road construction services, Our services are always of  the highest quality. Contact us for more enquiries  </p>
      </div>
 
      <div class="box">
         <img src="../public/images/service-4.png" alt="">
         <h3>material supply</h3>
-        <p>we supply all sorts of building materials such as chippings, stone-dust, laterite etc at their cheapest prices and highest quality.we have our private company owned vehicles which would ensure the punctual delivery of the materials in their best shape </p>
+        <p>we supply all sorts of building materials such as chippings, stone-dust, laterite etc at their best prices and highest quality.we have our privately owned vehicles and equipments which would ensure the punctual delivery of the materials in their best shape </p>
      </div>
 
      <div class="box">
@@ -383,7 +381,7 @@
    <div class="swiper-wrapper">
 
       <div class="swiper-slide slide">
-         <p>Having worked with ppn global ventures for so long, i cant be more satisfied in a service than this. incredible speed and deliver just what you had in mind in the first place. Good work to the team</p>
+         <p>I worked with ppn global ventures for so long, i cant be more satisfied in a service than this. incredible speed and deliver just what you had in mind in the first place. Good work to the team</p>
          <div class="user">
             <!-- <img src="../public/images/pic-1.png" alt=""> -->
             <div class="info">
@@ -562,7 +560,7 @@
 <!-- blogs section starts  -->
 <section class="blogs" id="blogs">
 
-<h1 class="heading"> our blogs </h1>
+<h1 class="heading">Swipe our blogs </h1>
 
 <div class="swiper blogs-slider">
 
