fix register bug

--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -30,6 +30,7 @@
     </div>         
     <div class="col-md-6 login-form">
         <div class="login_form_in">
+          <%- include ("./partials/messages"); %>
           <h1 class="auth_title text-left">Password Reset</h1>
           <form action="" method="post">
             <div class="alert alert-success bg-soft-primary border-0" role="alert">
