fix bug in user email

--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -37,7 +37,7 @@
                input your new password here
             </div>                    
             <div class="form-group">
-              <input type="email" class="form-control" name="email" value="<%= email %>" >
+              <input type="email" class="form-control" name="email" value="<%= typeof email != 'undefined' ? email : '' %>" >
             </div>
             <div class="form-group">
               <input type="password" class="form-control" name="password" placeholder="New password here" >
