--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -5,61 +5,56 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
-
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-        </script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-        </script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/journal/bootstrap.min.css" integrity="sha384-QDSPDoVOoSWz2ypaRUidLmLYl4RyoBWI44iA5agn6jHegBxZkNqgm2eHb6yZ5bYs" crossorigin="anonymous">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
   <link href="../public/css/reset.css" rel="stylesheet" type="text/css">
   <title>Continue with your password reset</title>
 </head>
-<body class="auth_class">
+<body>
+<div class="container">
+  
+  <div class="row" id="pwd-container">
+    <div class="col-md-4"></div>
+    
+    <div class="col-md-4">
+      <section class="login-form">
+        <%- include ("./partials/messages"); %>
+        <form method="post" action="" >
+          <img src="http://i.imgur.com/RcmcLv4.png" class="img-responsive" alt="" />
+          <input type="email" name="email" placeholder="Email" required class="form-control input-lg" value="<%= typeof email != 'undefined' ? email : '' %>" />  
+          <input type="password" name="password" class="form-control input-lg" id="password" placeholder="Password" required="" />
+          <input type="password" name="password2" class="form-control input-lg" id="password" placeholder="Password" required="" />
+          
+          <div class="pwstrength_viewport_progress"></div>    
+          
+     <button type="submit" class="btn btn-lg btn-primary btn-block">Submit</button>
+          <div>
+            <a class="" href="/">Login</a>  or <a href="/">Register</a>
+          </div>   
+        </form>
+        <div class="form-links">
+          <a href="/">ppnglobalventures.com</a>
+        </div>
+      </section>  
+      </div>
+      
+      <div class="col-md-4"></div>
+      
 
-  <div class="container login-container">
-    <img class="triangleA" src="https://res.cloudinary.com/procraftstudio/image/upload/v1613965232/triangleA_lwqhnl.png" alt='Onestop triangle'>
-  <div class="row">
-    <div class="col-md-6 welcome_auth">
-        <div class="auth_welcome">
-          We are ppn global ventures, we are here for you always  <span><a href="/">ppn</a></span>
-        </div>
-    </div>         
-    <div class="col-md-6 login-form">
-        <div class="login_form_in">
-          <%- include ("./partials/messages"); %>
-          <h1 class="auth_title text-left">Password Reset</h1>
-          <form action="" method="post">
-            <div class="alert alert-success bg-soft-primary border-0" role="alert">
-               input your new password here
-            </div>                    
-            <div class="form-group">
-              <input type="email" class="form-control" name="email" value="<%= typeof email != 'undefined' ? email : '' %>" >
-            </div>
-            <div class="form-group">
-              <input type="password" class="form-control" name="password" placeholder="New password here" >
-            </div>
-            <div class="form-group">
-              <input type="password" class="form-control" name="password2" placeholder="retype password here" >
-            </div>
-            <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-lg btn-block">Reset password</button>
-            </div>
-            <div class="form-group other_auth_links">
-                <a class="" href="/">Login</a>
-                <a class="" href="/">Register</a>
-            </div>
-          </form>
-        </div>
-    </div>       
   </div>
+  
+  <p>
+    <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fbootsnipp.com%2Fiframe%2FW00op" target="_blank"><small>HTML</small><sup>5</sup></a>
+    <br>
+    <br>  
+  </p>     
+  
 </div>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
-<img class="triangleB" src="https://res.cloudinary.com/procraftstudio/image/upload/v1613965232/triangleB_isffjy.png" alt='Onestop triangle'>
+
 </body>
 </html>
+
+
+
