--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -4,54 +4,52 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
-
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-        </script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-        </script>
-  <link href="../public/css/reset.css" rel="stylesheet" type="text/css">
-  <title> Reset your password </title>
-  
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="https//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="https//code.jquery.com/jquery-1.11.1.min.js"></script>
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+ <style>
+  .form-gap {
+    padding-top: 70px;
+}
+ </style>
+  <title> Reset your password </title> 
 </head>
-
-  <body class="auth_class">
-
-          <div class="container login-container">
-            <img class="triangleA" src="https://res.cloudinary.com/procraftstudio/image/upload/v1613965232/triangleA_lwqhnl.png" alt='Onestop triangle'>
-          <div class="row">
-            <div class="col-md-6 welcome_auth">
-                <div class="auth_welcome">
-                  We are ppn global ventures, we are here for you always  <span><a href="/">ppn</a></span>
+<body>
+  
+ <div class="form-gap"></div>
+<div class="container">
+	<div class="row">
+		<div class="col-md-4 col-md-offset-4">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <div class="text-center">
+                  <h3><i class="fa fa-lock fa-4x"></i></h3>
+                  <h2 class="text-center">Forgot Password?</h2>
+                  <p>You can reset your password here.</p>
+                  <div class="panel-body">
+    
+                    <form  action="/get-email" id="register-form" role="form" autocomplete="off" class="form" method="post">
+    
+                      <div class="form-group">
+                        <div class="input-group">
+                          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
+                          <input id="email" name="email" placeholder="email address" class="form-control"  type="email">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <input name="recover-submit" class="btn btn-lg btn-warning btn-block" value="Reset Password" type="submit">
+                      </div>
+                    </form>
+    
+                  </div>
                 </div>
-            </div>         
-            <div class="col-md-6 login-form">
-                <div class="login_form_in">
-                  <h1 class="auth_title text-left">Password Reset</h1>
-                  <form action="/get-email" method="post">
-                    <div class="alert alert-success bg-soft-primary border-0" role="alert">
-                        Enter your email address and we'll send you an email with instructions to reset your password.
-                    </div>                    
-                    <div class="form-group">
-                      <input type="email" class="form-control" name="email" placeholder="Email Address">
-                    </div>
-                    <div class="form-group">
-                      <button type="submit" class="btn btn-primary btn-lg btn-block">Get Email</button>
-                    </div>
-                    <div class="form-group other_auth_links">
-                        <a class="" href="/">Login</a>
-                        <a class="" href="/">Register</a>
-                    </div>
-                  </form>
-                </div>
-            </div>       
+              </div>
+            </div>
           </div>
-        </div>
-    <img class="triangleB" src="https://res.cloudinary.com/procraftstudio/image/upload/v1613965232/triangleB_isffjy.png" alt='Onestop triangle'>
+	</div>
+</div>
 </body>
 
 </html>
+
