--- a/views/sent-email.ejs
+++ b/views/sent-email.ejs
@@ -4,13 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <title>Email sent, please check inbox</title>
 </head>
 <body>
-  <section>
-    <h3>
+ 
+    <div class="container-md">     
       please check your inbox, Email has been sent if its valid, Thank you! 
-    </h3>
+    </div>
+      please check your inbox, Email has been sent if its valid, Thank you! 
+  
   </section>
 </body>
 </html>
