--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -5,56 +5,66 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>  
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link href="../public/css/reset.css" rel="stylesheet" type="text/css">
   <title>Continue with your password reset</title>
 </head>
 <body>
-<div class="container">
-  
-  <div class="row" id="pwd-container">
-    <div class="col-md-4"></div>
-    
-    <div class="col-md-4">
-      <section class="login-form">
-        <%- include ("./partials/messages"); %>
-        <form method="post" action="" >
-          <img src="http://i.imgur.com/RcmcLv4.png" class="img-responsive" alt="" />
-          <input type="email" name="email" placeholder="Email" required class="form-control input-lg" value="<%= typeof email != 'undefined' ? email : '' %>" />  
-          <input type="password" name="password" class="form-control input-lg" id="password" placeholder="Password" required="" />
-          <input type="password" name="password2" class="form-control input-lg" id="password" placeholder="Password" required="" />
-          
-          <div class="pwstrength_viewport_progress"></div>    
-          
-     <button type="submit" class="btn btn-lg btn-primary btn-block">Submit</button>
-          <div>
-            <a class="" href="/">Login</a>  or <a href="/">Register</a>
-          </div>   
-        </form>
-        <div class="form-links">
-          <a href="/">ppnglobalventures.com</a>
+
+  <div class="container forget-password">
+    <div class="row">
+        <div class="col-md-12 col-md-offset-4">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <div class="text-center">
+<img src="https://usa.afsglobal.org/SSO/SelfPasswordRecovery/images/send_reset_password.svg?v=3" alt="car-key" border="0">
+                        <h2 class="text-center">Forgot Password?</h2>
+                        <%- include ("./partials/messages"); %>
+                        <p>You can reset your password here.</p>
+                        <form id="register-form" role="form" autocomplete="off" class="form" method="post">
+                          <div class="form-group">
+                            <div class="input-group">
+                              <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
+                              <input id="forgetAnswer" name="password" placeholder="Email" class="form-control" value="<%= typeof email != 'undefined' ? email : '' %>" type="email">
+                            </div>
+                        </div>
+                            <div class="form-group">
+                                <div class="input-group">
+                                  <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
+                                  <input id="forgetAnswer" name="password" placeholder="Answer" class="form-control"  type="password">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
+                                    <input id="forgetAnswer" name="password2" placeholder="Answer" class="form-control"  type="password">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <input name="btnForget" class="btn btn-lg btn-primary btn-block btnForget" value="Reset Password" type="submit">
+                            </div>
+
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-      </section>  
-      </div>
-      
-      <div class="col-md-4"></div>
-      
-
-  </div>
-  
-  <p>
-    <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fbootsnipp.com%2Fiframe%2FW00op" target="_blank"><small>HTML</small><sup>5</sup></a>
-    <br>
-    <br>  
-  </p>     
-  
+    </div>
 </div>
-
 </body>
 </html>
+
+
+
+
+
+
+
 
 
 
