--- a/views/sent-email.ejs
+++ b/views/sent-email.ejs
@@ -5,15 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <style>
+ .container{
+  position: absolute;
+  width: 300px;
+  height: 200px;
+  z-index: 15;
+  top: 50%;
+  left: 50%;
+  margin: -100px 0 0 -150px;
+  background: red;
+}
+ </style>
   <title>Email sent, please check inbox</title>
 </head>
 <body>
- 
-    <div class="container-md">     
+    <div class="container">     
       please check your inbox, Email has been sent if its valid, Thank you! 
     </div>
-      please check your inbox, Email has been sent if its valid, Thank you! 
-  
-  </section>
 </body>
 </html>
