--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -30,7 +30,7 @@
                           <div class="form-group">
                             <div class="input-group">
                               <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-                              <input id="forgetAnswer" name="password" placeholder="Email" class="form-control" value="<%= typeof email != 'undefined' ? email : '' %>" type="email">
+                              <input id="forgetAnswer" name="email" placeholder="Email" class="form-control" value="<%= typeof email != 'undefined' ? email : '' %>" type="email">
                             </div>
                         </div>
                             <div class="form-group">
