display login errors and favicons on ui

--- a/views/confirmation-page.ejs
+++ b/views/confirmation-page.ejs
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="https://i.postimg.cc/5tTMXnKG/ppn-logo.jpg">
   </head>
     <style>
       body {
