--- a/views/contactform.ejs
+++ b/views/contactform.ejs
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../public/css/style.css">
     <link href="../public/styles.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-   
+    <link rel="icon" type="image/x-icon" href="https://i.postimg.cc/5tTMXnKG/ppn-logo.jpg">
     <title>Contact us at ppn Global</title>
   </head>
   <body>
