--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+	<link rel="icon" type="image/x-icon" href="https://i.postimg.cc/5tTMXnKG/ppn-logo.jpg">
 	<link href="../public/css/pay.css" rel="stylesheet" type="text/css">
 	<title>pay for service</title>
 </head>
