--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -8,6 +8,7 @@
 <script src="https//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="https//code.jquery.com/jquery-1.11.1.min.js"></script>
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+ <link rel="icon" type="image/x-icon" href="https://i.postimg.cc/5tTMXnKG/ppn-logo.jpg">
  <style>
   .form-gap {
     padding-top: 70px;
