--- a/views/sent-email.ejs
+++ b/views/sent-email.ejs
@@ -5,23 +5,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="icon" type="image/x-icon" href="https://i.postimg.cc/5tTMXnKG/ppn-logo.jpg">
   <style>
  .container{
   position: absolute;
   width: 300px;
   height: 200px;
   z-index: 15;
+  padding-top: 30px;
   top: 50%;
   left: 50%;
   margin: -100px 0 0 -150px;
-  background: red;
+  background: rgb(212, 223, 195);
 }
  </style>
   <title>Email sent, please check inbox</title>
 </head>
 <body>
     <div class="container">     
-      please check your inbox, Email has been sent if its valid, Thank you! 
+      please check your inbox, Email has been sent if its valid,
+      if you dont find it, check your spam messages.Thank you!
     </div>
 </body>
 </html>
