--- a/views/team.ejs
+++ b/views/team.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>meet the ppn CEO</title>
-
+  <link rel="icon" type="image/x-icon" href="https://i.postimg.cc/5tTMXnKG/ppn-logo.jpg">
   <link rel="stylesheet" href="../public/css/team.css">
 </head>
 
