--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -37,13 +37,13 @@
                             <div class="form-group">
                                 <div class="input-group">
                                   <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-                                  <input id="forgetAnswer" name="password" placeholder="Answer" class="form-control"  type="password">
+                                  <input id="forgetAnswer" name="password" placeholder="Password here" class="form-control"  type="password">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="input-group">
                                     <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-                                    <input id="forgetAnswer" name="password2" placeholder="Answer" class="form-control"  type="password">
+                                    <input id="forgetAnswer" name="password2" placeholder="Confirm password here" class="form-control"  type="password">
                                 </div>
                             </div>
                             <div class="form-group">
