order page in progress

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,7 +35,7 @@
        <div class="icons">
          <div id="menu-btn" class="fas fa-bars"></div>
          <div id="info-btn" class="fas fa-info-circle"></div>
-     <a href=""> <div id="search-btn" class="fa-solid fa-money-bill-1"></div></a> 
+     <a href="/pay"> <div id="search-btn" class="fa-solid fa-money-bill-1"></div></a> 
      <div id="login-btn" class="fas fa-user"></div>  
      
        </div>
