--- a/public/styles.css
+++ b/public/styles.css
@@ -230,6 +230,12 @@ section {
   color: var(--light-color);
   margin: .7rem 0;
 }
+#order{
+ width: 70%;
+ margin-top: 5%;
+ box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+  height: 50%;
+}
 
 .header .login-form .flex {
   display: -webkit-box;
