create order page and function

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -502,31 +502,31 @@
          <!-- <p>maintenance</p>
          <p>24/7 support</p> -->
       </div>
-      <a href="#" class="btn">order</a>
+      <a href="/order" class="btn">order</a>
    </div>
 
    <div class="box">
       <i class="fas fa-building"></i>
       <h3>Block</h3>
-      <div class="price"><span>&#8358;</span>350<span><br>per one</span></div>
+      <div class="price"><span>&#8358;</span>350<span><br>per tonne</span></div>
       <div class="list">
          <p>9</p>
          <p>inch</p>
          <p>block</p>
       </div>
-      <a href="#" class="btn">Order</a>
+      <a href="/order" class="btn">Order</a>
    </div>
 
    <div class="box">
       <i class="fas fa-city"></i>
       <h3>Block</h3>
-      <div class="price"><span>&#8358;</span>320<span><br>per one</span></div>
+      <div class="price"><span>&#8358;</span>320<span><br>per tonne</span></div>
       <div class="list">
          <p>6</p>
          <p>inch</p>
          <p>block</p>
       </div>
-      <a href="#" class="btn">order</a>
+      <a href="/order" class="btn">order</a>
    </div>
 
 </div>
