add order chippings page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -494,7 +494,7 @@
    <div class="box">
       <i class="fas fa-home"></i>
       <h3>chippings</h3>
-      <div class="price"><span>&#8358;</span>6200<span></span><span><br>per one</span></div>
+      <div class="price"><span>&#8358;</span>6200<span></span><span><br>per tonne</span></div>
       <div class="list">
          <p>chippings</p>
          <p>per </p>
@@ -502,7 +502,7 @@
          <!-- <p>maintenance</p>
          <p>24/7 support</p> -->
       </div>
-      <a href="/order" class="btn">order</a>
+      <a href="/chippings-order" class="btn">order</a>
    </div>
 
    <div class="box">
