--- a/views/order.ejs
+++ b/views/order.ejs
@@ -28,20 +28,8 @@
           <option value="320">6 inches</option>
         </select>
         <div class="col-md-4">
-          <label for="tonnes" class="form-label">Tonnes</label>
-          <select  id="tonnes" class="form-select" hidden required>
-            <option selected disabled>tonnes</option>
-            <option value="1">1 tonne</option>
-            <option value="2">2 tonnes</option>
-            <option value="3">3 tonnes</option>
-            <option value="4">4 tonnes</option>
-            <option value="5">5 tonnes</option>
-            <option value="6">6 tonnes</option>
-            <option value="7">7 tonnes</option>
-            <option value="8">8 tonnes</option>
-            <option value="9">9 tonnes</option>
-            <option value="10">10 tonnes</option>
-          </select>
+          <label for="tonnes" class="form-label">Number of blocks</label>
+         <input type="text"  class="form-control" id="tonnes" placeholder="Number of blocks here" >
         </div>
         <div class="col-md-2">
           <label for="price" class="form-label">Amount</label>
