change url endpoints

--- a/views/order.ejs
+++ b/views/order.ejs
@@ -67,7 +67,7 @@
         payment_options:"card, ussd,	account, mobilemoneyghana",
   
         // specified redirect URL
-        redirect_url: "https://ppnglobalventures.herokuapp.com/orderApproval",
+        redirect_url: "https://ppnglobalventures.com/orderApproval",
          meta: {
      inches,
      tonnes
