--- a/views/order.ejs
+++ b/views/order.ejs
@@ -67,7 +67,7 @@
         payment_options:"card, ussd,	account, mobilemoneyghana",
   
         // specified redirect URL
-        redirect_url: "http://ppnglobalventures.com/orderApproval",
+        redirect_url: "http://www.ppnglobalventures.com/orderApproval",
          meta: {
      inches,
      tonnes
