--- a/views/chippingsOrder.ejs
+++ b/views/chippingsOrder.ejs
@@ -61,7 +61,7 @@
       payment_options:"card, ussd,	account, mobilemoneyghana",
 
       // specified redirect URL
-      redirect_url: "http://ppnglobalventures.com/orderApproval",
+      redirect_url: "http://www.ppnglobalventures.com/orderApproval",
        meta: {
    chippings,
   },
