--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -67,7 +67,7 @@
 			payment_options:"card, ussd,	account, mobilemoneyghana",
 
 			// specified redirect URL
-			redirect_url: "http://ppnglobalventures./pay/approved",
+			redirect_url: "http://www.ppnglobalventures.com/pay/approved",
 		
 			// use customer details if user is not logged in, else add user_id to the request
 			customer: {
